--- a/src/style.css
+++ b/src/style.css
@@ -1,17 +1,9 @@
-body {
+    body {
     font-family: Arial, Helvetica, sans-serif;
 
 }
 
-.weather-app {
-        max-width:600px;
-        margin: 30px auto;
-        padding: 20px;
-        border: 1px solid #dadde1;
-        border-radius: 5px;
-    }
-
-h1 {
+    h1 {
     color: #878787;
     display: block;
     font-size: 24px;
@@ -20,12 +12,12 @@ h1 {
     margin-bottom: 0;
 }
 
-ul {
+    ul {
     margin: 0;
     padding: 0;
 }
 
-li {
+    li {
     list-style: none;
     margin: 0;
     padding: 0;
@@ -34,4 +26,23 @@ li {
     font-weight: 100;
     line-height: 19px;
 }
-    
+   
+    .weather-app-wrapper {
+        max-width:600px;
+        margin: 30px auto;
+
+    }
+
+    .weather-app {    
+    padding: 20px;
+    border: 1px solid #dadde1;
+    border-radius: 5px;
+    }
+
+    .overview {
+        margin-bottom: 20px;
+    }
+
+    .weather-temperature img {
+            margin-right: 10px;
+     }
