--- a/src/style.css
+++ b/src/style.css
@@ -44,5 +44,22 @@
     }
 
     .weather-temperature img {
-            margin-right: 10px;
+        margin-right: 5px;
+        height: 64px;
+        width: 64px;
+        margin-bottom: 20px;
+      }
+      
+
+     .weather-temperature strong{
+      color: rgb (33, 33, 33);
+      font-size: 64px;
+      font-weight: 400;
+      line-height: 1;
+        }
+
+     .units {
+         position: relative;
+         font-size: 16px;
+         top: -34px;
      }
