--- a/src/style.css
+++ b/src/style.css
@@ -25,6 +25,7 @@
     font-size: 16px;
     font-weight: 100;
     line-height: 19px;
+    text-transform: capitalize;
 }
    
     .weather-app-wrapper {
