--- a/src/style.css
+++ b/src/style.css
@@ -57,10 +57,30 @@
       font-size: 64px;
       font-weight: 400;
       line-height: 1;
+     
         }
 
      .units {
          position: relative;
          font-size: 16px;
          top: -34px;
+        
      }
+
+     .weather-temperature .active {
+         color: black;
+         cursor: default;
+     }
+
+     .weather-temperature .active:hover {
+        text-decoration: none;
+    }
+
+    #celsius-link {
+        text-decoration: none;
+    }
+
+    
+    #fahrenheit-link {
+        text-decoration: none;
+    }
