--- a/src/style.css
+++ b/src/style.css
@@ -84,3 +84,23 @@
     #fahrenheit-link {
         text-decoration: none;
     }
+
+    .weather-forecast {
+      margin-top:20px;
+      text-align: center;
+    }
+
+    .weather-forecast-date {
+        font-size: 16px;
+        color: #000;
+        opacity: 0.6;
+          }
+
+    .weather-forecast-temperature-min {
+        opacity: 0.6;
+    }
+
+    .weather-forecast-temperature {
+        font-size: 13px;
+        color: #000;
+      }
